// DECLARES THE INTERFACE THAT IS EXPECTED BY HSS
// MAKE SURE YOU KEEP THIS FILE IN SYNC BETWEEN HSS AND SIM_MANAGER

syntax = "proto3";

option go_package = "pb/client/gen";

package sim_manager.v1;

import "validator.proto";



service SimManagerService {
    rpc ActivateSim(ActivateSimRequest) returns (ActivateSimResponse);
    rpc GetSimStatus(GetSimStatusRequest) returns (GetSimStatusResponse);
    rpc GetSimInfo(GetSimInfoRequest) returns (GetSimInfoResponse);
}

message ActivateSimRequest {
    string user_id = 1;
}

message ActivateSimResponse{}

message GetSimStatusRequest {
    string iccid = 1 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetSimStatusResponse {
    enum Status {
        UNKNOWN = 0;
        INACTIVE = 1;
        ACTIVE = 2;
    }

    Status status = 1;
    Services services = 2;
}

message Services {
    bool voice = 1;
    bool data = 2;
    bool sms = 3;
}

message GetSimInfoRequest {
    string iccid = 1 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetSimInfoResponse {
    string iccid = 1;
    string imsi = 2;
}