syntax = "proto3";

option go_package = "pb/gen";

package ukama.hss.v1;


import "validator.proto";


service UserService {
    // adds new user with ICCID. Designed for internal use only.
    rpc Add (AddRequest) returns (AddResponse);

    // adds new user with ICCID. Designed for internal use only.
    rpc AddInternal (AddInternalRequest) returns (AddInternalResponse);
    // deletes user and IMSI that is assigend to him
    rpc Delete (DeleteUserRequest) returns (DeleteUserResponse);
    // lists all users for organization
    rpc List(ListUsersRequest) returns (ListUsersResponse);

    // Get user info
    rpc Get(GetUserRequest) returns (GetUserResponse);

    // Generate sim token from ICCID
    rpc GenerateSimToken(GenerateSimTokenRequest) returns (GenerateSimTokenResponse);
}

message AddInternalRequest{
    string org = 1 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
    User user = 2 [(validator.field) = { msg_exists: true }];
    string iccid = 3;
    bool isPhysicalSim = 4;
}

message AddInternalResponse{
    User user = 1;
    string iccid = 2;
}

message AddRequest{
    string org = 1 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
    User user = 2 [(validator.field) = { msg_exists: true }];
    // Optional.  SimToken could be generated by GenerateSimToken function
    // If empty then ICCID is taken from the sim pool
    // For debug purpose value `I_DO_NOT_NEED_A_SIM` can be used. In that case ICCID and IMSI is not attached to the user
    string sim_token = 3;
}

message AddResponse{
    User user = 1;
    string iccid = 2 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}


message DeleteUserRequest{
    string uuid = 2 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
}

message DeleteUserResponse {

}

message User {
    string name = 2 [(validator.field) = { string_not_empty: true,  length_gt: 2 }];
    string email = 4;
    string phone = 5;
    string uuid = 6;
}

message ListUsersRequest {
    string org =1 [(validator.field) = { string_not_empty: true,  length_gt: 2 }];
}

message ListUsersResponse{
    string org =1;
    repeated  User users = 2;
}

message GenerateSimTokenRequest{
    bool fromPool = 1;
    string iccid = 2 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GenerateSimTokenResponse{
    string sim_token = 1;
}

message GetUserRequest {
    string uuid = 2 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
}

message GetUserResponse {
    User user = 1;
    Sim sim = 2;
}

message Sim {

    string iccid = 1;


    // Type of sim card.
    bool isPhysical = 2;

    // Status of sim card inside of Ukama Network
    SimStatus ukama = 3;

    // Status of sim card in a Sim manager.
    // If status is IDLE or ACTIVE then sim card can be used outside of Ukama Network
    SimStatus carrier = 4;
}

message SimStatus{
    enum Status {
        UNKNOWN = 0;
        INACTIVE = 1;
        ACTIVE = 2;
    }
    Status status = 1;
    Services services = 2;
}

message Services {
    bool voice = 1;
    bool data = 2;
    bool sms = 3;
}